--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Taiyuan (Parker) Gong</title>
+  <title>Taiyuan Gong</title>
   <meta name="description" content="Taiyuan (Parker) Gong — PhD candidate. Edge Intelligence, VCTS, Generative AI for Railway." />
   <link rel="icon" href="favicon.ico" />
   <style>
