--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
           <h2>Selected Publications</h2>
           <ul class="pubs">
             <li>
-              <b>Edge Intelligence Enhanced Monte Carlo Tree Search for Virtually Coupled Train Set Optimal Control</b> — Taiyuan Gong, <i>et al.</i>
-              <span class="venue">(under major revision) IEEE Transactions on Mobile Computing, 2025</span>
+              <b>Gong, T.<b>, Zhu, L., Yu, F. R., & Tang, T. (2023). Edge intelligence in intelligent transportation systems: A survey.
+              <span class="venue">IEEE Transactions on Intelligent Transportation Systems, 2023, 24(9): 8919-8944.</span>
               <!-- <a href="#">PDF</a> · <a href="#">Code</a> · <a href="#">DOI</a> -->
             </li>
             <li>
