--- a/index.html
+++ b/index.html
@@ -146,13 +146,55 @@
 
         <section id="projects">
           <h2>Projects</h2>
+        
+          <!-- PI Projects -->
+          <h3>Principal Investigator (PI) / 项目负责人</h3>
           <ul>
-            <li><b>PI</b> — Central Universities Basic Research: Edge-Intelligence-based Computing for Smart Train Driving (2023–2025).</li>
-            <li>Beijing NSF (Rail Transit Joint): Edge-cooperative general visual perception for urban rail and low-altitude environments (2024–2027).</li>
-            <li>Industry: ML-based autonomous driving model optimization (2024–2026).</li>
-            <li>Industry: Multidimensional perception & simulation platform for heavy-haul trains (2024–2026).</li>
+            <li>
+              <b>中央高校基本科研业务项目：</b>基于边缘智能的轨道交通智能驾驶计算方法研究，<b>2023–2025</b>.
+              <br>
+              <i>Fundamental Research Funds for the Central Universities:</i> Research on Intelligent Driving Computing Methods for Rail Transit Based on Edge Intelligence, <b>2023–2025</b>.
+            </li>
+          </ul>
+        
+          <!-- Key Contributor Projects -->
+          <h3>Key Contributor / 主要参与人</h3>
+           <!-- 2024 -->
+            <li>
+              <b>自然科学横向项目：</b>基于机器学习的自动驾驶模型的实现与优化，<b>2024–2026</b>.
+              <br>
+              <i>Industry-Academia Cooperation Project:</i> Implementation and Optimization of Autonomous Driving Models Based on Machine Learning, <b>2024–2026</b>.
+            </li>
+            <li>
+              <b>自然科学横向项目：</b>重载列车多维感知综合监测分析及仿真决策平台技术服务，<b>2024–2026</b>.
+              <br>
+              <i>Industry-Academia Cooperation Project:</i> Technical Service for Comprehensive Monitoring, Analysis, and Simulation Decision-Making Platform for Multi-Dimensional Perception of Heavy-Haul Trains, <b>2024–2026</b>.
+            </li>
+            <li>
+              <b>自然科学横向项目：</b>城轨车地异构通信下端边云协同机制与智能调配技术研究，<b>2024–2026</b>.
+              <br>
+              <i>Industry-Academia Cooperation Project:</i> Research on Edge-Cloud Collaboration Mechanism and Intelligent Scheduling Technology for Heterogeneous Train-Ground Communication in Urban Rail Transit, <b>2024–2026</b>.
+            </li>
+            <li>
+              <b>北京市自然基金“轨道交通联合”：</b>城市轨道交通及低空飞行环境的边缘协同通用视觉感知研究，<b>2024–2027</b>.
+              <br>
+              <i>Beijing Natural Science Foundation “Rail Transit Joint”:</i> Research on General Visual Perception for Urban Rail Transit and Low-Altitude Flight Environments Based on Edge Collaboration, <b>2024–2027</b>.
+            </li>
+          <ul>
+            <!-- 2023 -->
+            <li>
+              <b>自然科学横向项目：</b>基于边缘计算的轨道交通民用通信智能运维系统设计与开发，<b>2023–2024</b>.
+              <br>
+              <i>Industry-Academia Cooperation Project:</i> Design and Development of Intelligent Operation and Maintenance System for Rail Transit Civil Communication Based on Edge Computing, <b>2023–2024</b>.
+            </li>
+            <li>
+              <b>北京市自然基金会“丰台联合-前沿”：</b>数据驱动的轨道交通客流精准预测与列车运行动态调整方法，<b>2023–2025</b>.
+              <br>
+              <i>Beijing Natural Science Foundation “Fengtai Joint – Frontier”:</i> Data-Driven Methods for Accurate Passenger Flow Prediction and Dynamic Train Operation Adjustment in Rail Transit, <b>2023–2025</b>.
+            </li>
           </ul>
         </section>
+
 
         <section id="service">
           <h2>Academic Service</h2>
