--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <!-- Left column -->
       <aside class="card">
         <img class="avatar" src="avatar.jpg" alt="Parker Gong" />
-        <h1>Taiyuan (Parker) Gong <span style="font-weight:400">龚泰源</span></h1>
+        <h1>Taiyuan (Parker) Gong </h1>
+        <h1><span style="font-weight:400">龚泰源</span></h1>
         <p class="role">PhD Candidate · Beijing Jiaotong University<br/>Visiting PhD (2024–2025), SUTD</p>
         <p class="contact">
           <a href="mailto:tygong@bjtu.edu.cn">Email</a>
@@ -72,7 +73,7 @@
         <section id="bio">
           <h2>Bio</h2>
           <p>
-            <b>Taiyuan (Parker) Gong</b> is a PhD candidate at the Advanced National Key Lab of Autonomous Operation for Railway Systems, Beijing Jiaotong University (BJTU). His research focuses on <b>edge intelligence</b>, <b>reinforcement learning</b>, and <b>generative AI/LLMs</b> for railway perception–control–computing systems (ATO/VCTS &amp; train–edge cooperative computing).
+            <b>Taiyuan Gong</b> is a PhD candidate at the Advanced National Key Lab of Autonomous Operation for Railway Systems, Beijing Jiaotong University (BJTU). His research focuses on <b>edge intelligence</b>, <b>reinforcement learning</b>, and <b>generative AI/LLMs</b> for railway perception–control–computing systems (ATO/VCTS &amp; train–edge cooperative computing).
           </p>
         </section>
 
@@ -94,7 +95,7 @@
         <section id="visiting">
           <h2>Visiting</h2>
           <ul class="list-tight">
-            <li><b>Visiting PhD</b>, Singapore University of Technology and Design (SUTD), 2024–2025. </li>
+            <li><b>Visiting PhD</b>, Singapore University of Technology and Design (SUTD), Oct. 2024– Oct. 2025. </li>
             - Academic Advisors: Prof. Zehui Xiong, Prof. Dusit Niyato (IEEE Fellow).
           </ul>
         </section>
