--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           <h2>Education</h2>
           <ul class="list-tight">
             <li> <b>Beijing Jiaotong University (BJTU), China.</b></li>
-            - <b>Direct Ph.D.<b>, Traffic Information Engineering &amp; Control.
-            - Academic Advisor: Prof. Li Zhu, Prof. F.Richard Yu (IEEE Fellow).
+            - <b>Direct Ph.D.</b>>, Traffic Information Engineering &amp; Control.<br>
+            - Academic Advisor: Prof. Li Zhu, Prof. F.Richard Yu (IEEE Fellow).<br>
             - National PhD Scholarship (the highest honors)
             <li> <b>Beijing Jiaotong University (BJTU), China.</b></li>
-            - <b>B.E.</b>, Automation.
+            - <b>B.E.</b>, Automation.<br>
             - Postgraduate recommendation without entrance examination.
           </ul>
         </section>
