--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         <section id="visiting">
           <h2>Visiting</h2>
           <ul class="list-tight">
-            <li><b>Visiting PhD</b>, Singapore University of Technology and Design (SUTD), Oct. 2024 – Oct. 2025. </li>
+            <li> <b>Singapore University of Technology and Design (SUTD)</b>, Oct. 2024 – Oct. 2025. </li>
+            - <b>Visiting PhD</b>, iConnect Lab (Intelligent Computing and Networking Innovation Lab).<br>
             - Academic Advisors: Prof. Zehui Xiong, Prof. Dusit Niyato (IEEE Fellow).
           </ul>
         </section>
