--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             - National PhD Scholarship (the highest honors)
             <li> <b>Beijing Jiaotong University (BJTU), China.</b></li>
             - <b>B.E.</b>, Automation.<br>
+            - Acedemic Advisor: Prof. Ze Liu, Prof. Ziwei Chen.
             - Postgraduate recommendation without entrance examination.
           </ul>
         </section>
