--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         <section id="education">
           <h2>Education</h2>
           <ul class="list-tight">
-            <li> <b>Beijing Jiaotong University (BJTU), China.</b></li>
+            <li> <b>Beijing Jiaotong University (BJTU), Beijing, China.  2021 - now</li>
             - <b>Direct Ph.D.</b>, Traffic Information Engineering &amp; Control.<br>
             - Academic Advisor: Prof. Li Zhu, Prof. F.Richard Yu (IEEE Fellow).<br>
             - National PhD Scholarship (the highest honors)
-            <li> <b>Beijing Jiaotong University (BJTU), China.</b></li>
+            <li> <b>Beijing Jiaotong University (BJTU), Beijing, China.  2017 - 2021</b></li>
             - <b>B.E.</b>, Automation.<br>
             - Acedemic Advisor: Prof. Ze Liu, Prof. Ziwei Chen.
             - Postgraduate recommendation without entrance examination.
@@ -96,8 +96,8 @@
         <section id="visiting">
           <h2>Visiting</h2>
           <ul class="list-tight">
-            <li> <b>Singapore University of Technology and Design (SUTD)</b>, Oct. 2024 – Oct. 2025. </li>
-            - <b>Visiting PhD</b>, iConnect Lab (Intelligent Computing and Networking Innovation Lab).<br>
+            <li> <b>Singapore University of Technology and Design (SUTD)</b>, Singapore.  Oct. 2024 – Oct. 2025 </li>
+            - <b>Visiting Ph.D..</b>, iConnect Lab (Intelligent Computing and Networking Innovation Lab).<br>
             - Academic Advisors: Prof. Zehui Xiong, Prof. Dusit Niyato (IEEE Fellow).
           </ul>
         </section>
