--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <main>
         <!-- Bio -->
         <section id="bio">
-          <h2>Bio</h2>
+          <h2>Biography</h2>
           <p>
             <b>Taiyuan Gong</b> is a PhD candidate at the Advanced National Key Lab of Autonomous Operation for Railway Systems, Beijing Jiaotong University (BJTU). His research focuses on <b>edge intelligence</b>, <b>reinforcement learning</b>, and <b>generative AI/LLMs</b> for railway perception–control–computing systems (ATO/VCTS &amp; train–edge cooperative computing).
           </p>
