--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             - National PhD Scholarship (the highest honors)
             <li> <b>Beijing Jiaotong University (BJTU), Beijing, China.  2017 - 2021</b></li>
             - <b>B.E.</b>, Automation.<br>
-            - Acedemic Advisor: Prof. Ze Liu, Prof. Ziwei Chen.
+            - Acedemic Advisor: Prof. Ze Liu, Prof. Ziwei Chen.<br>
             - Postgraduate recommendation without entrance examination.
           </ul>
         </section>
