--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <h2>Education</h2>
           <ul class="list-tight">
             <li> <b>Beijing Jiaotong University (BJTU), Beijing, China.  2021 - now</b></li>
-            - <b>Direct Ph.D.</b>, Traffic Information Engineering &amp; Control.<br>
+            - <b>Ph.D.</b>, Traffic Information Engineering &amp; Control.<br>
             - Academic Advisor: Prof. Li Zhu, Prof. F.Richard Yu (IEEE Fellow).<br>
             - National PhD Scholarship (the highest honors)
             <li> <b>Beijing Jiaotong University (BJTU), Beijing, China.  2017 - 2021</b></li>
